--- a/frontend/src/client/app/components/logout.component.html
+++ b/frontend/src/client/app/components/logout.component.html
@@ -1,1 +1,1 @@
-<a (click)="logout()" [hidden]="!isLoggedIn">logout</a>
+<a (click)="logout()" [hidden]="!isLoggedIn" style="cursor: pointer">Logout</a>
