--- a/frontend/src/client/app/components/navbar.component.html
+++ b/frontend/src/client/app/components/navbar.component.html
@@ -1,7 +1,8 @@
 <nav>
+
     <a [routerLink]="['/']">Home</a>
     <a [routerLink]="['/mosaic']">Browse</a>
-    <a [routerLink]="['/mosaic-create']">Create</a>
+    <a [routerLink]="['/mosaic-create']">Create Mosaic</a>
     <a [routerLink]="['/folders']">Folders</a>
     <sd-logout></sd-logout>
 </nav>
