--- a/frontend/src/client/css/main.css
+++ b/frontend/src/client/css/main.css
@@ -20,6 +20,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+:host {
+  display: block;
+  padding: 0 16px;
+}
+
+
+h1, h2, h3, h4, h5 {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 200;
+}
+
 p {
   font-weight: 400;
   letter-spacing: 0.01em;
@@ -38,13 +51,21 @@ li {
   margin-top: 4px;
 }
 
-input {
+input, select {
   border: 1px solid #106cc8;
   font-size: 14px;
   height: 40px;
   outline: none;
   padding: 8px;
+  min-width: 200px;
 }
+
+form {
+  border: 1px solid #106cc8;
+  padding: 20px;
+  max-width: 800px;
+}
+
 
 center{
   margin: 0 auto;
