updated creation of folders by user

--- a/frontend/src/client/app/+mosaic/components/folders.component.html
+++ b/frontend/src/client/app/+mosaic/components/folders.component.html
@@ -1,3 +1,4 @@
+<a [routerLink]="['../folder-create']">+ Create Folder</a>
 <ul>
     <li *ngFor="let folder of folders">
         <h4>{{ folder.name }} #{{ folder.images.length }}</h4>
